# fastcode-gpucb

./: .gitignore  CMakeLists.txt  README.md  baseline.c  compile  execute  main.c  mu_timed.txt  plot.py  plot2.py  reference_gpucb.py  runtime_python_c.csv  tester.py
python_ref_code/: reference_gpucb.py
references/: reference_gpucb.py
report/: Makefile  bibl_conf.bib  report.tex
src/: baseline.c  cholesky.c  cholesky.h  execute_cholesky  gpucb.c  gpucb.h  gpucb0.c  gpucb0.h  gpucb1.c  gpucb1.h  gpucb2.c  gpucb2.h  gpucb3.c  gpucb3.h  gpucb4.c  gpucb4.h  gpucb5.c  gpucb5.h  gpucb6.c  gpucb6.h  gpucb7.c  gpucb7.h  gpucb8.c  gpucb8.h  gpucb_flops.c  gpucb_flops.h  main.c  mathHelpers.c  mathHelpers.h  mathHelpers1.c  mathHelpers1.h  mathHelpers2.c  mathHelpers2.h  mathHelpers3.c  mathHelpers3.h  matrix.c  matrix.h  triangle.c  triangle.h  triangle_full.c  (+1 more)
timing/: CMakeLists.txt  majorCompile  minorCompile  results.txt
timing/.svn/: wc.db
timing/lib/: CMakeLists.txt
timing/results/: baseline-comp-chol_N.csv  baseline_200_I.csv  baseline_40_I.csv  baseline_I.csv  baseline_N.csv  cholesky_I.csv  cholesky_N.csv  cholesky_solve2_I.csv  cholesky_solve2_opt_I.csv  cholesky_solve2_vect_I.csv  cholesky_vect_I.csv  flops_200.txt  gpucb_opt_200_I.csv  gpucb_opt_40_I.csv  matrix_I.csv  matrix_v_I.csv  plot.py  python_vs_c.csv
timing/src/: baseline.c  baseline.h  gpucb.c  gpucb.h  gpucb2.c  gpucb2.h  gpucb3.c  main.c  main.h  mathHelpers.c  mathHelpers.h  mathHelpers0.c  mathHelpers0.h  mathHelpers2.c  mathHelpers3.c  mathHelpers3.h  test.h
